[package]
name = "sc-block-builder"
version = "0.10.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "Axlib block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-state-machine = { version = "0.10.0-dev", path = "../../primitives/state-machine" }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
sp-block-builder = { version = "4.0.0-dev", path = "../../primitives/block-builder" }
sp-inherents = { version = "4.0.0-dev", path = "../../primitives/inherents" }
sc-client-api = { version = "4.0.0-dev", path = "../api" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", features = [
    "derive",
] }

[dev-dependencies]
axlib-test-runtime-client = { path = "../../test-utils/runtime/client" }
