[package]
name = "sc-rpc-api"
version = "0.10.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "Axlib RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1" }
futures = "0.3.16"
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
jsonrpc-derive = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
jsonrpc-pubsub = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
log = "0.4.8"
parking_lot = "0.11.1"
thiserror = "1.0"

sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
sp-version = { version = "4.0.0-dev", path = "../../primitives/version" }
sp-runtime = { path = "../../primitives/runtime", version = "4.0.0-dev" }
sc-chain-spec = { path = "../chain-spec", version = "4.0.0-dev" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.68"
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" }
sp-rpc = { version = "4.0.0-dev", path = "../../primitives/rpc" }
sp-tracing = { version = "4.0.0-dev", path = "../../primitives/tracing" }
