[package]
name = "pallet-grandpa"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "FRAME pallet for GRANDPA finality gadget"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false, features = ["derive"] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = ["derive"] }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../../primitives/application-crypto" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../primitives/core" }
sp-finality-grandpa = { version = "4.0.0-dev", default-features = false, path = "../../primitives/finality-grandpa" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "../../primitives/session" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "../../primitives/staking" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, path = "../authorship" }
pallet-session = { version = "4.0.0-dev", default-features = false, path = "../session" }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
frame-benchmarking = { version = "4.0.0-dev", path = "../benchmarking" }
grandpa = { git = "https://github.com/axia-tech/finality-grandpa", package = "finality-grandpa", branch = "v0.14.4", features = ["derive-codec"] }
sp-keyring = { version = "4.0.0-dev", path = "../../primitives/keyring" }
pallet-balances = { version = "4.0.0-dev", path = "../balances" }
pallet-offences = { version = "4.0.0-dev", path = "../offences" }
pallet-staking = { version = "4.0.0-dev", path = "../staking" }
pallet-staking-reward-curve = { version = "4.0.0-dev", path = "../staking/reward-curve" }
pallet-timestamp = { version = "4.0.0-dev", path = "../timestamp" }
frame-election-provider-support = { version = "4.0.0-dev", path = "../election-provider-support" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-session/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
