[package]
name = "sp-authority-discovery"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Authority discovery primitives"
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std"
]
