[package]
name = "beefy-primitives"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false, features = ["derive"] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = ["derive"] }

sp-api = { version = "4.0.0-dev", path = "../api", default-features = false }
sp-application-crypto = { version = "4.0.0-dev", path = "../application-crypto", default-features = false }
sp-core = { version = "4.0.0-dev", path = "../core", default-features = false }
sp-runtime = { version = "4.0.0-dev", path = "../runtime", default-features = false }
sp-std = { version = "4.0.0-dev", path = "../std", default-features = false }

[dev-dependencies]
hex-literal = "0.3"

sp-keystore = { version = "0.10.0-dev", path = "../keystore" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
