[package]
name = "sp-externalities"
version = "0.10.0-dev"
license = "Apache-2.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "Axlib externalities abstraction"
documentation = "https://docs.rs/sp-externalities"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-storage = { version = "4.0.0-dev", path = "../storage", default-features = false }
sp-std = { version = "4.0.0-dev", path = "../std", default-features = false }
environmental = { version = "1.1.3", default-features = false }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"sp-std/std",
	"sp-storage/std",
]
