[package]
name = "sp-finality-grandpa"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "Primitives for GRANDPA integration, suitable for WASM compilation."
documentation = "https://docs.rs/sp-finality-grandpa"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false, features = ["derive"] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", default-features = false, features = ["derive"] }
grandpa = { git = "https://github.com/axia-tech/finality-grandpa", package = "finality-grandpa", branch = "v0.14.4", default-features = false, features = ["derive-codec"] }
log = { version = "0.4.8", optional = true }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "../application-crypto" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-keystore = { version = "0.10.0-dev", default-features = false, path = "../keystore", optional = true }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }

[features]
default = ["std"]
std = [
	"log",
	"serde",
	"codec/std",
	"scale-info/std",
	"grandpa/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
]
