[package]
name = "sp-inherents"
version = "4.0.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "Provides types and traits for creating and checking inherents."
documentation = "https://docs.rs/sp-inherents"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-runtime = { version = "4.0.0-dev", path = "../runtime", optional = true }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21", optional = true }
impl-trait-for-tuples = "0.2.0"
async-trait = { version = "0.1.50", optional = true }

[dev-dependencies]
futures = "0.3.9"

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"codec/std",
	"sp-core/std",
	"thiserror",
	"sp-runtime",
	"async-trait",
]
