[package]
name = "sp-sandbox"
version = "0.10.0-dev"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "Apache-2.0"
homepage = ""
repository = "https://github.com/axia-tech/axia-core/"
description = "This crate provides means to instantiate and execute wasm modules."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmi = { git = "https://github.com/axia-tech/wasmi", branch = "v0.9.1", version = "0.9.1", default-features = false, features = ["core"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmi = { git = "https://github.com/axia-tech/wasmi", branch = "v0.9.1", version = "0.9.1" }

[dependencies]
wasmi = { git = "https://github.com/axia-tech/wasmi", branch = "v0.9.1", version = "0.9.1", optional = true }

sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../io" }
sp-wasm-interface = { version = "4.0.0-dev", default-features = false, path = "../wasm-interface" }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", default-features = false }
log = { version = "0.4", default-features = false }

[dev-dependencies]
wat = "1.0"
assert_matches = "1.3.0"

[features]
default = ["std"]
std = [
	"wasmi",
	"sp-core/std",
	"sp-std/std",
	"codec/std",
	"sp-io/std",
	"sp-wasm-interface/std",
	"log/std",
]
strict = []
wasmer-sandbox = []
